--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "red tetris server side",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "start": "nodemon server/index.js",
+    "test": "echo \"Error: no test specified\""
   },
+
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/beeguy74/tetris_server.git"
@@ -18,5 +20,9 @@
   "homepage": "https://github.com/beeguy74/tetris_server#readme",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "webpack": "^5.87.0",
+    "webpack-cli": "^5.1.4"
   }
 }
