--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "tetris_server",
   "version": "1.0.0",
   "description": "red tetris server side",
-  "main": "index.js",
+  "private": "true",
   "scripts": {
     "start": "nodemon server/index.js",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\""
   },
-
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/beeguy74/tetris_server.git"
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/beeguy74/tetris_server#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "webpack": "^5.87.0",
