--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "red tetris server side",
   "private": "true",
   "scripts": {
-    "start": "nodemon server/index.js",
+    "start": "nodemon --exec babel-node ./server/main.js",
     "build": "webpack",
     "test": "echo \"Error: no test specified\""
   },
@@ -20,9 +20,21 @@
   "homepage": "https://github.com/beeguy74/tetris_server#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "socket.io": "^4.6.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.22.5",
+    "@babel/core": "^7.22.5",
+    "@babel/node": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
+    "babel-loader": "^9.1.2",
+    "debug": "^4.3.4",
+    "fs": "^0.0.1-security",
+    "nodemon": "^2.0.22",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4"
   }
