--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "socket.io": "^4.6.2"
+    "socket.io": "^4.6.2",
+    "@reduxjs/toolkit": "^1.9.5",
+    "react-redux": "^8.1.0",
+    "react-router-dom": "^6.13.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.5",
@@ -36,6 +39,10 @@
     "fs": "^0.0.1-security",
     "nodemon": "^2.0.22",
     "webpack": "^5.87.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4"
   }
 }
