--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   },
   "homepage": "https://github.com/beeguy74/tetris_server#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "socket.io": "^4.6.2",
-    "@reduxjs/toolkit": "^1.9.5",
     "react-redux": "^8.1.0",
-    "react-router-dom": "^6.13.0"
+    "react-router-dom": "^6.13.0",
+    "socket.io": "^4.6.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.5",
@@ -35,14 +35,17 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "babel-loader": "^9.1.2",
+    "css-loader": "^6.8.1",
     "debug": "^4.3.4",
-    "fs": "^0.0.1-security",
-    "nodemon": "^2.0.22",
-    "webpack": "^5.87.0",
-    "webpack-cli": "^5.1.4",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4"
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "fs": "^0.0.1-security",
+    "html-webpack-plugin": "^5.5.3",
+    "nodemon": "^2.0.22",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.87.0",
+    "webpack-cli": "^5.1.4"
   }
 }
