--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
   "presets": [
-    "@babel/preset-env", "@babel/react"
+    "@babel/preset-env",
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic" // defaults to classic
+      }
+    ]
   ]
 }
