--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
-    "socket.io": "^4.6.2"
+    "socket.io-client": "^4.6.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.5",
@@ -35,6 +35,7 @@
     "@babel/node": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
+    "socket.io": "^4.6.2",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.8.1",
     "debug": "^4.3.4",
