--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,25 @@ logs/
 # Testing files
 /coverage/
 
-# IDE-specific files
-.vscode/
-.idea/
 
-# macOS-specific files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+
+
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
