--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "red tetris server side",
   "private": "true",
   "scripts": {
+    "start-dev": "webpack-dev-server --open",
     "start": "nodemon ./server/main.js",
     "dev": "webpack --mode development && nodemon server/main.js",
     "build": "webpack",
@@ -35,7 +36,6 @@
     "@babel/node": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
-    "socket.io": "^4.6.2",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.8.1",
     "debug": "^4.3.4",
@@ -47,8 +47,10 @@
     "fs": "^0.0.1-security",
     "html-webpack-plugin": "^5.5.3",
     "nodemon": "^2.0.22",
+    "socket.io": "^4.6.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.87.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
