--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": "true",
   "scripts": {
     "start": "nodemon ./server/main.js",
-    "dev": "webpack --mode development && nodemon server/main.js",
+    "__dev": "webpack --mode development --watch && nodemon server/main.js",
+    "dev": "concurrently \"npx webpack --mode development --watch\" \"nodemon server/main.js\"",
     "build": "webpack",
     "test": "echo \"Error: no test specified\""
   },
@@ -35,8 +36,8 @@
     "@babel/node": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
-    "socket.io": "^4.6.2",
     "babel-loader": "^9.1.2",
+    "concurrently": "^8.2.0",
     "css-loader": "^6.8.1",
     "debug": "^4.3.4",
     "eslint": "^8.38.0",
@@ -47,8 +48,11 @@
     "fs": "^0.0.1-security",
     "html-webpack-plugin": "^5.5.3",
     "nodemon": "^2.0.22",
+    "socket.io": "^4.6.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.87.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^6.1.1",
+    "webpack-hot-middleware": "^2.25.3"
   }
 }
