--- a/package.json
+++ b/package.json
@@ -51,8 +51,6 @@
     "socket.io": "^4.6.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.87.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-middleware": "^6.1.1",
-    "webpack-hot-middleware": "^2.25.3"
+    "webpack-cli": "^5.1.4"
   }
 }
