--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "express": "^4.18.2",
     "express-history-api-fallback": "^2.2.1",
     "lodash": "^4.17.21",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.13.0",
-    "socket.io-client": "^4.6.2"
+    "socket.io-client": "^4.6.2",
+    "styled-components": "^6.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.5",
