--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon ./server/main.js",
     "dev": "concurrently \"npx webpack --mode development --watch\" \"nodemon server/main.js\"",
     "build": "webpack",
-    "test": "echo \"Error: no test specified\""
+    "test": "jest --passWithNoTests"
   },
   "repository": {
     "type": "git",
@@ -35,10 +35,11 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.22.5",
-    "@babel/core": "^7.22.5",
+    "@babel/core": "^7.22.10",
     "@babel/node": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
+    "babel-jest": "^29.6.2",
     "babel-loader": "^9.1.2",
     "concurrently": "^8.2.0",
     "css-loader": "^6.8.1",
@@ -51,6 +52,7 @@
     "file-loader": "^6.2.0",
     "fs": "^0.0.1-security",
     "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.6.2",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.2",
     "style-loader": "^3.3.3",
